test/libsolidity/syntaxTests/parsing/declaring_fixed_literal_variables.sol
contract A {
    fixed40x40 pi = 3.14;
}
// ----
// UnimplementedFeatureError: Not yet implemented - FixedPointType.
